tests/cases/smoke/invalid/const_reassign.dp
const MAX = 10
MAX = 11
